data/derived/fa15/progs/unify/prog3696.ml.out
Characters 145-148:
  | Sine sin -> Printf.printf ("sin(pi*%s"^^ sin ^^")" );
                                             ^^^
Error: This expression has type expr but an expression was expected of type
         ('a, 'b, 'c, 'd, 'e, 'f) format6 =
           ('a, 'b, 'c, 'd, 'e, 'f) CamlinternalFormatBasics.format6
